--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "tps://git@github.com/EnzoLynn/RxFields.git"
+    "url": "https://git@github.com/EnzoLynn/RxFields.git"
   },
   "main": "dist/IndexDBHelper.js",
   "dependencies": {
